[tool.poetry]
name = "WordsExamples"
version = "0.1.0"
description = "Get examples of a word usage"
authors = ["kunansy <kolobov.kirill@list.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
rnc = "~0.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
